# backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  production.yml  staging.yml
docs/: openapi.json
docs/schemas/: confirmation.json  confirmation__status.json  login.json  user(created).json  user.json
ramws/: manage.py  run.sh
ramws/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ramws/accounts/migrations/: 0001_initial.py  0002_user_authorized_programs.py
ramws/core/: base.py  local_settings.example.py  middleware.py  permissions.py  responses.py  s3.py  settings.py  tests.py  urls.py  views.py  wsgi.py
ramws/core/templates/docs/: swagger_ui.html
ramws/docs/: apps.py  responses.py  urls.py  views.py
ramws/files/: admin.py  models.py  queue.py  storage.py  urls.py  views.py
ramws/files/migrations/: 0001_initial.py  0002_program_code.py  0003_run_created_by.py  0004_run_base_path.py
ramws/runs/: apps.py  models.py
